fix input bottom cutoff when focused
Some of these were being mangled.

--- a/styles/x-terminal.less
+++ b/styles/x-terminal.less
@@ -100,6 +100,7 @@ x-terminal-profile {
 
 .x-terminal-profile-menu-item {
 	padding: 0.8em 0;
+	overflow: auto;
 }
 
 .x-terminal-profile-menu-item-label {
